try fix blurred menu

--- a/nightStyle.css
+++ b/nightStyle.css
@@ -98,6 +98,7 @@ input:checked + .slider:before {
 	background-color: rgb(0, 0, 0);
 	/* border-radius: 22px; */
 	background-color: rgba(0, 0, 0, 0.80);
+	-webkit-backdrop-filter: blur(15px);
 	backdrop-filter: blur(15px);
 	border-color: #e2eaf0;
 	overflow-x: hidden;
